# ts_agent

./: .env  README.md  app.py  main_agent.py  pyproject.toml  start.sh
agents/: __init__.py  main_graph_agent.py  memory_utils.py  persistence.py  sub_agents.py
agents_v2/: __init__.py  extra_tools.py  main_graph_agent.py  sub_agents.py
config/: agent.yml  chroma.yml  mcp.yml  prompts.yml  rag.yml
data/db/: after_sales_returns.jsonl  md5.text  purchase_orders.jsonl
data/db/chroma_db/: chroma.sqlite3
data/long_memory/: checkpointer.sqlite  store.sqlite
model/: factory.py
prompts/: after_sales_prompt.txt  main_prompt.txt  purchase_prompt.txt  rag_summarize.txt  report_prompt.txt  summary_prompt.txt
rag/: rag_service.py  vector_store.py
taoke-mcp-main/: Dockerfile  LICENSE  PROMPTS.md  README.md  config-schema.json  docker-compose.yml  package-lock.json  package.json  prompt.md  smithery.yaml
tools/: mcp_stdio_proxy.py  mcp_tools.py  middleware.py  tools.py
tools/tool_agents/: rag_agent.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
