[project]
name = "ts-agent"
version = "0.1.0"
description = "RAG and agent demo project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dashscope>=1.23.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.7",
    "protobuf==3.20.3",
    "python-dotenv>=1.1.1",
    "pypdf>=5.8.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.49.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
